# drift

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
Formula/: drift.rb
frontend/: package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionModal.tsx  FileList.tsx  FilePane.tsx  FileRow.tsx  PathBar.tsx  Toolbar.tsx  TransferBar.tsx
frontend/src/hooks/: useTransfer.ts  useWebSocket.ts
frontend/src/types/: protocol.ts
frontend/test/: integration.test.ts  web-panel-navigation.test.ts
frontend/test/helpers/: checksums.ts  drift-process.ts  ports.ts  ws-client.ts
src/: config.rs  frontend.rs  main.rs
src/client/: browse.rs  mod.rs  pull.rs  reconnect.rs  send.rs  transfer.rs
src/crypto/: handshake.rs  stream.rs
src/fileops/: browse.rs  compress.rs  decompress.rs  mod.rs  reader.rs  writer.rs
src/protocol/: codec.rs  messages.rs  mod.rs  transfer.rs
src/server/: browser_transfer.rs  file_api.rs  mod.rs  transfer_handler.rs  transfer_receiver.rs  ws_handler.rs
wiki/: cli.md  encryption.md  protocol.md  pull-transfer.md  push-transfer.md
