[package]
name = "drift"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Embedded frontend
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# WS client (for --target mode)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# File system
walkdir = "2"

# Compression (for folder transfers)
tar = "0.4"
flate2 = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
base64 = "0.22"
anyhow = "1"
